--- a/fundoo/package.json
+++ b/fundoo/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.5.1",
+    "@syncfusion/ej2-react-buttons": "^17.4.47",
+    "@syncfusion/ej2-react-grids": "^17.4.47",
+    "@syncfusion/ej2-react-splitbuttons": "^17.4.47",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
@@ -13,11 +16,13 @@
     "mdbreact": "^4.25.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-dropdown-menu": "^1.1.15",
     "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^16.12.0",
     "react-js-snackbar": "^1.0.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
