--- a/fundoo/package.json
+++ b/fundoo/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-dropdown-menu": "^1.1.15",
     "react-bootstrap-sidebar": "0.0.1",
+    "react-color": "^2.18.0",
     "react-dom": "^16.12.0",
     "react-js-snackbar": "^1.0.4",
     "react-router-dom": "^5.1.2",
